# jym-member-auth-service/src/main/java/jymusic/jym_member_auth_service/dto/member/MemberProfileResponse.java
@@ -1,5 +1,6 @@
 package jymusic.jym_member_auth_service.dto.member;
 
+import jymusic.jym_member_auth_service.domain.member.AuthProvider;
 import jymusic.jym_member_auth_service.domain.member.Member;
 import jymusic.jym_member_auth_service.domain.member.Role;
 import lombok.*;
@@ -15,6 +16,7 @@ public class MemberProfileResponse {
     private String email;
     private String nickname;
     private Role role;
+    private AuthProvider authProvider;
 
     public static MemberProfileResponse fromEntity(Member member) {
         return MemberProfileResponse.builder()
@@ -23,6 +25,7 @@ public class MemberProfileResponse {
                 .email(member.getEmail())
                 .nickname(member.getNickname())
                 .role(member.getRole())
+                .authProvider(member.getAuthProvider())
                 .build();
     }
 }
